# Discord-AI-Agent

./: .gitignore  AICONTEXT.md  CONTRIBUTING.md  README.md  b4a_config.py  example.config.toml  gdrive_mcp.b4a.toml  mcp_cog.py  mcp_discord_bot.py  news.b4a.toml  pyproject.toml  requirements.txt  source_handlers.py  sse.py  sse_client_vendored.py
config/: claude.example.main.toml  example.main.toml  gdrive_mcp.b4a.toml  gdrive_mcp.example.b4a.toml  local_files.example.b4a.toml  news.b4a.toml  news.example.b4a.toml  openai.example.main.toml  reddit_rss_example.b4a.toml  standing_prompt.example.b4a.toml  toy.example.b4a.toml  toys.b4a.toml  toys.example.b4a.toml
demo_server/: MCP_SERVER_TESTING.md  README.md  requirements.txt  sse_server_vendored.py  toy_mcp_server.py
pylib/: __about__.py  __init__.py  claude_provider.py  discordutil.py  history.py  llm_providers.py  openai_provider.py  openaiutil.py  rssutil.py  searchutil.py  source_handlers.py
test/: README.md  __init__.py  conftest.py  test_rssutil.py  test_searchutil_sparse_vector.py  test_source_handlers.py
util/: check_supabase.py  check_tool_validation.py  supabase_setup.py
