[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discord-ai-agent"
dynamic = ["version"]
# version = "0.0.3"
description = "Discord bot for supporting AI/LLM chat applications powered by the Model Context Protocol (MCP), allowing for numerous integrations"
readme = "README.md"
requires-python = ">=3.12"

license = "Apache-2.0"
keywords = []
authors = [
  { name = "Uche Ogbuji", email = "uche@ogbuji.net" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [  # https://hatch.pypa.io/latest/config/dependency/
    "discord>=2.3.2",
    "fire>=0.7.0",
    "fastmcp",  # Rather than mcp, which is "official", but 1.x & not as well maintained
    "ogbujipt>=0.9.6",
    "rich>=14.0.0",
    "structlog>=25.2.0",
    "httpx>=0.25.0", # Added httpx
    "tenacity>=8.2.0", # For retry logic
]

# Optional dependencies
[project.optional-dependencies]
rss = [
    "feedparser>=6.0.11",
]

[project.urls]
Documentation = "https://github.com/OoriData/Discord-AI-Agent#readme"
Issues = "https://github.com/OoriData/Discord-AI-Agent/issues"
Source = "https://github.com/OoriData/Discord-AI-Agent"

[tool.hatch.version]
path = "pylib/__about__.py"

[tool.hatch.build]
include = ["*.toml", "*.py"]
# include = ["*.toml", "*.html", "*.py", "pylib/resource/**"]

[tool.hatch.build.sources]  # Rewriting path in distribution
"pylib" = "discord_aiagent"

# Include non-python files in the distribution https://hatch.pypa.io/latest/config/build/#forced-inclusion
# [tool.hatch.build.targets.wheel.force-include]
# 'pylib/resource' = 'discord_aiagent/resource'
